--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://farooqui-owais.github.io/counter",
+  "homepage": "https://farooqui-owais.github.io/counter/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "fix-paths": "node fix-paths.js",
     "predeploy": "npm run build",
-    "deploy": "npm run build && npm run fix-paths && gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
